turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:13: error: value Black is not a member of object java.awt.Color
	quart(Color.Black)
                    ^